--- a/contact.html
+++ b/contact.html
@@ -334,13 +334,12 @@
                     <h4>Dienstleistungen</h4>
 
                     <ul class="menu__opciones">
-                        <li><a href="index.html">» Heim</a></li>
-                        <li><a href="about.html">» über Uns</a></li>
-                        <li><a href="services.html">» Dienstleistungen</a></li>
-                        <li><a href="rooms.html">» zimmer</a></li>
-                        <li><a href="roomssingle.html">zimmer einzel</a></li>
-                        <li><a href="contact.html">» Kontakt</a></li>
-                        <li><a href="reservation.html">Jetzt buchen</a></li>
+                        <li><a href="services.html">» Dienstleistungen 1</a></li>
+                        <li><a href="services.html">» Dienstleistungen 2</a></li>
+                        <li><a href="services.html">» Dienstleistungen 3</a></li>
+                        <li><a href="services.html">» Dienstleistungen 4</a></li>
+                        <li><a href="services.html">» Dienstleistungen 5</a></li>
+                        <li><a href="services.html">» Dienstleistungen 6</a></li>
                     </ul>
                 </div>
 
