--- a/contact.html
+++ b/contact.html
@@ -325,7 +325,7 @@
                         <li><a href="contact.html">» zimmer</a></li>
                         <li><a href="roomssingle.html">» zimmer einzel</a></li>
                         <li><a href="contact.html">» Kontakt</a></li>
-                        <li><a href="reservation">» Jetzt buchen</a></li>
+                        <li><a href="reservation.html">» Jetzt buchen</a></li>
                     </ul>
                 </div>
 
