--- a/services.html
+++ b/services.html
@@ -196,8 +196,8 @@
 
                 <div class="cardservices">
                     <img src="./imagenes/wifi.svg" alt="wifi" title="wifi">
-                    <h5>Food & Drinks</h5>
-                    <h4>Restaurant and Bar</h4>
+                    <h5>Accommodation</h5>
+                    <h4>High speed WiFi</h4>
                     <p>
                         Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader
                         will be distracted
@@ -209,8 +209,8 @@
 
                 <div class="cardservices">
                     <img src="./imagenes/spa.svg" alt="spa" title="spa">
-                    <h5>Food & Drinks</h5>
-                    <h4>Restaurant and Bar</h4>
+                    <h5>Comfort & Relax</h5>
+                    <h4>SPA & Wellness</h4>
                     <p>
                         Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader
                         will be distracted
@@ -222,8 +222,8 @@
 
                 <div class="cardservices">
                     <img src="./imagenes/headphones.svg" alt="headphones" title="headphones">
-                    <h5>Food & Drinks</h5>
-                    <h4>Restaurant and Bar</h4>
+                    <h5>Safe & Secure</h5>
+                    <h4>Staff 24/7</h4>
                     <p>
                         Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader
                         will be distracted
