--- a/services.html
+++ b/services.html
@@ -266,28 +266,28 @@
 
                     <div class="cardfacilities">
                         <img src="./imagenes/television.svg" alt="television" title="television">
-                        <h4>1200+</h4>
-                        <p>Happy Clients</p>
+                        <h4>Tv</h4>
+                        <p>Satellite</p>
                     </div>
 
 
                     <div class="cardfacilities">
                         <img src="./imagenes/motorcycle.svg" alt="motorcycle" title="motorcycle">
-                        <h4>18k+</h4>
-                        <p>Schröder Rooms</p>
+                        <h4>Bike</h4>
+                        <p>Rental</p>
                     </div>
 
                     <div class="cardfacilities">
                         <img src="./imagenes/cutlery.svg" alt="cutlery" title="cutlery">
-                        <h4>158</h4>
-                        <p>Employers</p>
+                        <h4>Food</h4>
+                        <p>Included</p>
                     </div>
 
 
                     <div class="cardfacilities">
                         <img src="./imagenes/bed.svg" alt="bed" title="bed">
-                        <h4>879+</h4>
-                        <p>Services</p>
+                        <h4>Bed</h4>
+                        <p>King size</p>
                     </div>
 
                 </div>
