--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
                 <div class="homes5why">
                     <img src="./imagenes/secret.svg" alt="secret" title="secret">
-                    <h4>Low Price</h4>
+                    <h4>Secure Zone</h4>
                     <p>
                         Ut enim ad minima veniam, quis nostrum ullam corporis suscipit laboriosam.
                     </p>
@@ -396,7 +396,7 @@
 
                 <div class="homes5why">
                     <img src="./imagenes/car.svg" alt="car" title="car">
-                    <h4>Low Price</h4>
+                    <h4>Pick Up</h4>
                     <p>
                         Ut enim ad minima veniam, quis nostrum ullam corporis suscipit
                         laboriosam.
